--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "webpack-dev-server": "^3.1.6"
   },
   "dependencies": {
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.0"
   }
 }
