--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/js/components/App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --open --mode development --history-api-fallback",
     "build": "webpack --mode production"
   },
   "keywords": [],
