--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/js/components/App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --mode development --history-api-fallback",
+    "start": "webpack-dev-server --open --mode development",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -33,7 +33,8 @@
     "webpack-dev-server": "^3.1.6"
   },
   "dependencies": {
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "style-loader": "^0.23.0"
   }
 }
